--- a/functions/test-db/json2/humanrightsdeclaration/humanrightsdeclaration-styles.scss
+++ b/functions/test-db/json2/humanrightsdeclaration/humanrightsdeclaration-styles.scss
@@ -291,6 +291,10 @@ footer {
             text-decoration: underline;
         }
     }
+    .footer-copyright p {
+        font-size: 0.85rem;
+        margin-bottom: 0;
+    }
 }
 
 @media screen and (max-width: 700px) {
