--- a/functions/test-db/json2/humanrightsdeclaration/templates/humanrightsdeclaration.hbs
+++ b/functions/test-db/json2/humanrightsdeclaration/templates/humanrightsdeclaration.hbs
@@ -94,13 +94,15 @@
                                 <a href="http://scvo.org" class="brand-logo" title="The Scotland Declaration on Human Rights">
                                     <img src="assets/images/scvo-logo.png" />
                                 </a>
-                                <p>The Scotland Declaration on Human Rights is supported by the Scottish Council for Voluntary Organisations</p>
+                                <p>
+                                    The Scotland Declaration on Human Rights is supported by the <a href="http://scvo.org">Scottish Council for Voluntary Organisations</a>
+                                </p>
                             </div>
                             <div class="footer-copyright">
                                 <div class="row">
                                     <div class="col-sm-12">
                                         <p>
-                                            &copy; 2017. The Scottish Council for Voluntary Organisations (SCVO) is a Scottish Charitable Incorporated Organisation. Charity registered in Scotland <a href="http://www.oscr.org.uk/charities/search-scottish-charity-register/charity-details?number=SC003558">SC003558</a>.
+                                            &copy; {{moment now "YYYY"}}. The Scottish Council for Voluntary Organisations (SCVO) is a Scottish Charitable Incorporated Organisation. Charity registered in Scotland <a href="http://www.oscr.org.uk/charities/search-scottish-charity-register/charity-details?number=SC003558">SC003558</a>. Registered office Mansfield Traquair Centre, 15 Mansfield Place, Edinburgh EH3 6BB.
                                         </p>
                                     </div>
                                 </div>
