--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -291,12 +291,15 @@ a:hover {
                     border-radius: 50%;
                     padding: $spacing-unit*1.75;
                     margin-bottom: $spacing-unit;
-                    box-shadow: 1px 2px 5rem rgba(255,255,255,0.2);
+                    box-shadow: 1px 2px 5rem rgba(255,255,255,0.15);
                 }
                 a:hover {
                     text-decoration: none;
                     .underline {
                         text-decoration: underline;
+                    }
+                    .fa {
+                        background-color: var(--mdc-theme-primary-dark);
                     }
                 }
                 a .underline {
