--- a/functions/test-db/json2/scvo/partials/wee-search.hbs
+++ b/functions/test-db/json2/scvo/partials/wee-search.hbs
@@ -5,7 +5,7 @@
             <div class="mdc-layout-grid">
                 <div class="mdc-layout-grid__inner">
                     <div class="mdc-layout-grid__cell">
-                        <div class="mdc-textfield mdc-textfield--upgraded" data-mdc-auto-init="MDCTextfield">
+                        <div class="mdc-textfield mdc-textfield--upgraded">
                             <input type="text" class="mdc-textfield__input" name="q" id="wee-query" value="{{params.query.q}}">
                             <div class="mdc-textfield__bottom-line"></div>
                         </div>
