--- a/functions/test-db/json2/scvo/templates/grant-charter-search.hbs
+++ b/functions/test-db/json2/scvo/templates/grant-charter-search.hbs
@@ -31,11 +31,9 @@
 
                     <hr />
 
-                    <form [searchroute]="'grant_search'">
+                    <form [searchroute]="'grant_search'" data-auto-search="true">
                         <div class="mdc-textfield mdc-textfield--upgraded">
-                            <input type="text" class="mdc-textfield__input" name="q" id="grant-charter-keywords"
-                                value="{{params.query.q}}">
-                            <label class="mdc-textfield__label" for="grant-charter-keywords">Keywords</label>
+                            <input type="text" class="mdc-textfield__input" name="q" id="grant-charter-keywords" value="{{params.query.q}}" placeholder="Search query">
                             <div class="mdc-textfield__bottom-line"></div>
                         </div>
                         <div class="mdc-form-field">
@@ -54,9 +52,6 @@
                                 {{/each}}
                             </select>
                         </div>
-                        <button class="mdc-button mdc-button--raised" type="submit">
-                            Search
-                        </button>
                     </form>
 
                     <hr />
