Sorted out members section

--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -942,27 +942,27 @@ h1.mdc-typography--title {
     }
     .goodmoves .mdc-card__media {
         background-color: #58a934;
-        background-image: url('https://storage.cloud.google.com/scvo-cms/scvo-cms-content/images/banners/goodmoves.png');
+        background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/banners/goodmoves.png');
     }
     .funding-scotland .mdc-card__media {
         background-color: #8AC645;
-        background-image: url('https://storage.cloud.google.com/scvo-cms/scvo-cms-content/images/banners/funding-scotland.png');
+        background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/banners/funding-scotland.png');
     }
     .goodhq .mdc-card__media {
         background-color: #4033E9;
-        background-image: url('https://storage.cloud.google.com/scvo-cms/scvo-cms-content/images/banners/goodhq.png');
+        background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/banners/goodhq.png');
     }
     .tfn .mdc-card__media {
         background-color: #3b9db1;
-        background-image: url('https://storage.cloud.google.com/scvo-cms/scvo-cms-content/images/banners/tfn.png');
+        background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/banners/tfn.png');
     }
     .credit-union .mdc-card__media {
         background-color: #1976D2;
-        background-image: url('https://storage.cloud.google.com/scvo-cms/scvo-cms-content/images/banners/credit-union.png');
+        background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/banners/credit-union.png');
     }
     .milo .mdc-card__media {
         background-color: #4475A0;
-        background-image: url('https://storage.cloud.google.com/scvo-cms/scvo-cms-content/images/banners/milo.png');
+        background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/banners/milo.png');
     }
     .mdc-card__supporting-text {
         padding-top: $spacing-unit;
@@ -988,13 +988,13 @@ h1.mdc-typography--title {
         }
     }
     .project-digital .mdc-card__media {
-        background-image: url('https://storage.cloud.google.com/scvo-cms/scvo-cms-content/images/banners/digital.png');
+        background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/banners/digital.png');
     }
     .project-open-government .mdc-card__media {
-        background-image: url('https://storage.cloud.google.com/scvo-cms/scvo-cms-content/images/banners/open-government.png');
+        background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/banners/open-government.png');
     }
     .project-cjs .mdc-card__media {
-        background-image: url('https://storage.cloud.google.com/scvo-cms/scvo-cms-content/images/banners/cjs.png');
+        background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/banners/cjs.png');
     }
 }
 .section-campaigns {
@@ -1012,19 +1012,19 @@ h1.mdc-typography--title {
         background-image: url('https://storage.googleapis.com/scvo-cms/wp-content/uploads/2017/10/europe-and-the-third-sector-bg-1400x400.jpg');
     }
     .eu-are-valued .mdc-card__media {
-        background-image: url('https://storage.cloud.google.com/scvo-cms/scvo-cms-content/images/banners/eu-are-valued.png');
+        background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/banners/eu-are-valued.png');
     }
     .building-healthier-happier-communities .mdc-card__media {
-        background-image: url('https://storage.cloud.google.com/scvo-cms/scvo-cms-content/images/banners/building-healthier-happier-communities.png');
+        background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/banners/building-healthier-happier-communities.png');
     }
     .datawareness .mdc-card__media {
-        background-image: url('https://storage.cloud.google.com/scvo-cms/scvo-cms-content/images/banners/datawareness.png');
+        background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/banners/datawareness.png');
     }
     .right-approach .mdc-card__media {
         background-image: url('https://storage.googleapis.com/scvo-cms/wp-content/uploads/2017/06/right-approach-strapline-hires-1024x337.jpg');
     }
     .scottish-charity-awards .mdc-card__media {
-        background-image: url('https://storage.cloud.google.com/scvo-cms/scvo-cms-content/images/banners/scottish-charity-awards.png');
+        background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/banners/scottish-charity-awards.png');
     }
     .welfare-reform .mdc-card__media {
         background-image: url('https://storage.googleapis.com/scvo-cms/wp-content/uploads/2017/10/welfare-reform-bg-1400x400.jpg');
