--- a/functions/test-db/json2/humanrightsdeclaration/templates/sign-up.hbs
+++ b/functions/test-db/json2/humanrightsdeclaration/templates/sign-up.hbs
@@ -6,4 +6,4 @@
 
 <p>Thank you – your support for equality and human rights is valued.</p>
 
-<iframe src="http://www.surveygizmo.eu/s3/90058214/humanrightsdeclaration" frameborder="0" width="100%" height="500" style="overflow:hidden"></iframe>
+<iframe src="https://www.surveygizmo.eu/s3/90058214/humanrightsdeclaration" frameborder="0" width="100%" height="500" style="overflow:hidden"></iframe>
