--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -151,8 +151,8 @@ main {
     max-width: 1280px;
     width: 95%;
     margin: 0 auto;
-    overflow: auto;
-    overflow: -webkit-paged-x;
+    //overflow: auto;
+    //overflow: -webkit-paged-x;
     padding: $spacing-unit/2;
 }
 :focus {
