--- a/functions/test-db/json2/digitalparticipation/templates/layout.hbs
+++ b/functions/test-db/json2/digitalparticipation/templates/layout.hbs
@@ -109,7 +109,7 @@
                                 </div>
                                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9 mdc-layout-grid__cell mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone">
                                     <p class="white-text copyright">
-                                        &copy; {{moment now "YYYY"}}. The Scottish Council for Voluntary Organisations (SCVO) is a Scottish Charitable Incorporated Organisation.<br />Charity registered in Scotland <a href="http://www.oscr.org.uk/charities/search-scottish-charity-register/charity-details?number=SC003558">SC003558</a>. Registered office Mansfield Traquair Centre, 15 Mansfield Place, Edinburgh EH3 6BB.
+                                        &copy; {{momentFormat (moment) "YYYY"}}. The Scottish Council for Voluntary Organisations (SCVO) is a Scottish Charitable Incorporated Organisation.<br />Charity registered in Scotland <a href="http://www.oscr.org.uk/charities/search-scottish-charity-register/charity-details?number=SC003558">SC003558</a>. Registered office Mansfield Traquair Centre, 15 Mansfield Place, Edinburgh EH3 6BB.
                                     </p>
                                 </div>
                                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3 mdc-layout-grid__cell mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone">
