--- a/functions/test-db/json2/humanrightsdeclaration/humanrightsdeclaration-styles.scss
+++ b/functions/test-db/json2/humanrightsdeclaration/humanrightsdeclaration-styles.scss
@@ -281,8 +281,11 @@ p.quote {
 
 footer {
     padding: $spacing-unit*2 0 $spacing-unit;
-    .brand-logo img {
-        max-width: 180px;
+    .brand-logo {
+        margin-right: $spacing-unit;
+        img {
+            max-width: 180px;
+        }
     }
     p {
         color: white;
