--- a/functions/test-db/json2/humanrightsdeclaration/templates/layout.hbs
+++ b/functions/test-db/json2/humanrightsdeclaration/templates/layout.hbs
@@ -108,13 +108,15 @@
                             </div>
                             <div class="footer-copyright">
                                 <p>
-                                    The Scotland Declaration on Human Rights is built and managed by the 
+                                    The Scotland Declaration on Human Rights is built and managed by the
                                     <a href="https://scvo.org">Scottish Council for Voluntary Organisations</a>
-                                    with support from Human Rights Consortium Scotland, Scottish Human Rights 
-                                    Commission and the Equality and Human Rights Commission &copy; 
-                                    {{moment now "YYYY"}}. The Scottish Council for Voluntary Organisations 
-                                    (SCVO) is a Scottish Charitable Incorporated Organisation. Charity registered 
-                                    in Scotland 
+                                    with support from Human Rights Consortium Scotland, Scottish Human Rights
+                                    Commission and the Equality and Human Rights Commission
+                                </p>
+                                <p class="copyright">
+                                    &copy; {{momentFormat (moment) "YYYY"}}. The Scottish Council for Voluntary Organisations
+                                    (SCVO) is a Scottish Charitable Incorporated Organisation. Charity registered
+                                    in Scotland
                                     <a href="https://www.oscr.org.uk/public/search-scottish-charity-register/charity-details?number=SC003558">SC003558</a>.
                                 </p>
                             </div>
