--- a/functions/test-db/json2/scvo/sass/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/sass/scvo-styles.scss
@@ -139,7 +139,7 @@ html {
     line-height: 1.45;
 }
 body {
-    background-color: var(--mdc-footer-primary-dark, #263238);
+    // background-color: var(--mdc-footer-primary-dark, #263238);
     min-height: 100%;
     padding: 0;
     margin: 0;
@@ -766,7 +766,6 @@ a:hover {
     min-height: $spacing-unit*9;
 }
 .splash-overlay {
-    // background-color: var(--mdc-theme-primary, #AD1457);
     background-image: linear-gradient(66deg, var(--mdc-theme-primary-fade, #AD1457), var(--mdc-theme-primary-fade, #AD1457) 47%, transparent 47.1%, transparent);
 }
 .splash-overlay.splash-overlay-hidden {
