--- a/functions/test-db/json2/scvo/templates/layout.hbs
+++ b/functions/test-db/json2/scvo/templates/layout.hbs
@@ -31,7 +31,7 @@
     {{{route.jsonLd}}}
     </script>
 </head>
-<body class="{{replace route.params.path '_' ' '}}">
+<body class="mdc-theme--site-bg {{replace route.params.path '_' ' '}}">
     <scvo-site>
         <div class="mdc-typography">
             <header class="mdc-toolbar mdc-toolbar--fixed">
