--- a/functions/test-db/json2/scvo/templates/staff-list.hbs
+++ b/functions/test-db/json2/scvo/templates/staff-list.hbs
@@ -51,7 +51,7 @@
                     {{#each primaryResponse.aggregations.query.buckets}}
                     <div class="v-margin">
                         <h2>{{key}}</h2>
-                        {{#each documents.hits.hits}}
+                        {{#each staff.hits.hits}}
                         {{{_source.rendered.list}}}
                         {{/each}}
                     </div>
