--- a/functions/test-db/json2/scvo/sass/_colours.scss
+++ b/functions/test-db/json2/scvo/sass/_colours.scss
@@ -1,29 +1,29 @@
-$mdcPrimary: #AD1457;
-$mdcPrimaryFade: rgba(173, 20, 87, 0.89);
-$mdcPrimaryLight: #C2185B;
-$mdcPrimaryDark: #880E4F;
-$mdcSecondary: #FF8F00;
-$mdcSecondaryLight: #FFA000;
-$mdcSecondaryDark: #FF6F00;
-$mdcThemeBackground: #ECEFF1;
-$mdcFooterPrimary: #371448;
-$mdcFooterPrimaryHighlight: #B3185B;
-$mdcFooterPrimaryLight: #592864;
-$mdcFooterPrimaryDark: #251032;
-$mdcSiteBackground: #290b4d;
-$mdcLayoutGridMarginDesktop: 0;
-$mdcLayoutGridMarginTablet: 0;
+// $mdcPrimary: #AD1457;
+// $mdcPrimaryFade: rgba(173,20,87,0.89);
+// $mdcPrimaryLight: #C2185B;
+// $mdcPrimaryDark: #880E4F;
+// $mdcSecondary: #FF8F00;
+// $mdcSecondaryLight: #FFA000;
+// $mdcSecondaryDark: #FF6F00;
+// $mdcThemeBackground: #ffffff;
+// $mdcFooterPrimary: #371448;
+// $mdcFooterPrimaryHighlight: #B3185B;
+// $mdcFooterPrimaryLight: #592864;
+// $mdcFooterPrimaryDark: #251032;
+// $mdcSiteBackground: #290b4d;
+// $mdcLayoutGridMarginDesktop: 0;
+// $mdcLayoutGridMarginTablet: 0;
 
 $colours: (
     default: (
         primary: #AD1457,
-        primary-fade: rgba(173, 20, 87, 0.89),
+        primary-fade: rgba(173,20,87,0.89),
         primary-light: #C2185B,
         primary-dark: #880E4F,
         secondary: #FF8F00,
         secondary-light: #FFA000,
         secondary-dark: #FF6F00,
-        background: #ECEFF1,
+        background: #ffffff,
         footer-primary: #371448,
         footer-primary-highlight: #B3185B,
         footer-primary-light: #592864,
@@ -32,28 +32,28 @@ $colours: (
     ),
     charity: (
         primary: #4527A0,
-        primary-fade: rgba(69, 39, 160, 0.89),
+        primary-fade: rgba(69,39,160,0.89),
         primary-light: #512DA8,
         primary-dark: #311B92,
         secondary: #FF8F00,
         secondary-light: #FFA000,
         secondary-dark: #FF6F00,
-        background: #ECEFF1,
+        background: #ffffff,
         footer-primary: #371448,
         footer-primary-highlight: #B3185B,
         footer-primary-light: #592864,
         footer-primary-dark: #251032,
         site-background: #290b4d
     ),
-    jobs: ( 
+    jobs: (
         primary: #2e7d32,
-        primary-fade: rgba(46, 125, 50, 0.89),
+        primary-fade: rgba(46,125,50,0.89),
         primary-light: #512da8,
         primary-dark: #1b5e20,
         secondary: #ff8f00,
         secondary-light: #ffa000,
         secondary-dark: #FF6F00,
-        background: #ECEFF1,
+        background: #ffffff,
         footer-primary: #371448,
         footer-primary-highlight: #B3185B,
         footer-primary-light: #592864,
@@ -68,7 +68,7 @@ $colours: (
         secondary: #FF8F00,
         secondary-light: #FFA000,
         secondary-dark: #FF6F00,
-        background: #ECEFF1,
+        background: #ffffff,
         footer-primary: #371448,
         footer-primary-highlight: #B3185B,
         footer-primary-light: #592864,
@@ -77,13 +77,13 @@ $colours: (
     ),
     funding: (
         primary: #00838F,
-        primary-fade: rgba(0, 131, 143, 0.89),
+        primary-fade: rgba(0,131,143,0.89),
         primary-light: #008D9B,
         primary-dark: #006064,
         secondary: #FF8F00,
         secondary-light: #FFA000,
         secondary-dark: #FF6F00,
-        background: #ECEFF1,
+        background: #ffffff,
         footer-primary: #371448,
         footer-primary-highlight: #B3185B,
         footer-primary-light: #592864,
@@ -92,13 +92,13 @@ $colours: (
     ),
     projects: (
         primary: #AD1457,
-        primary-fade: rgba(173, 20, 87, 0.89),
+        primary-fade: rgba(173,20,87,0.89),
         primary-light: #C2185B,
         primary-dark: #880E4F,
         secondary: #FF8F00,
         secondary-light: #FFA000,
         secondary-dark: #FF6F00,
-        background: #ECEFF1,
+        background: #ffffff,
         footer-primary: #371448,
         footer-primary-highlight: #B3185B,
         footer-primary-light: #592864,
@@ -107,13 +107,13 @@ $colours: (
     ),
     posts: (
         primary: #D84315,
-        primary-fade: rgba(216, 67, 21, 0.89),
+        primary-fade: rgba(216,67,21,0.89),
         primary-light: #E64A19,
         primary-dark: #BF360C,
         secondary: #FF8F00,
         secondary-light: #FFA000,
         secondary-dark: #FF6F00,
-        background: #ECEFF1,
+        background: #ffffff,
         footer-primary: #371448,
         footer-primary-highlight: #B3185B,
         footer-primary-light: #592864,
@@ -128,7 +128,7 @@ $colours: (
         secondary: #FF8F00,
         secondary-light: #FFA000,
         secondary-dark: #FF6F00,
-        background: #ECEFF1,
+        background: #ffffff,
         footer-primary: #371448,
         footer-primary-highlight: #B3185B,
         footer-primary-light: #592864,
@@ -143,7 +143,7 @@ $colours: (
         secondary: #FF8F00,
         secondary-light: #FFA000,
         secondary-dark: #FF6F00,
-        background: #ECEFF1,
+        background: #ffffff,
         footer-primary: #371448,
         footer-primary-highlight: #B3185B,
         footer-primary-light: #592864,
@@ -158,7 +158,7 @@ $colours: (
         secondary: #FF8F00,
         secondary-light: #FFA000,
         secondary-dark: #FF6F00,
-        background: #ECEFF1,
+        background: #ffffff,
         footer-primary: #371448,
         footer-primary-highlight: #B3185B,
         footer-primary-light: #592864,
@@ -173,7 +173,7 @@ $colours: (
         secondary: #FF8F00,
         secondary-light: #FFA000,
         secondary-dark: #FF6F00,
-        background: #ECEFF1,
+        background: #ffffff,
         footer-primary: #371448,
         footer-primary-highlight: #B3185B,
         footer-primary-light: #592864,
@@ -182,13 +182,13 @@ $colours: (
     ),
     credit-union: (
         primary: #1976D2,
-        primary-fade: rgba(21, 101, 192, 0.89),
+        primary-fade: rgba(21,101,192,0.89),
         primary-light: #1976D2,
         primary-dark: #145ea8,
         secondary: #FF8F00,
         secondary-light: #FFA000,
         secondary-dark: #FF6F00,
-        background: #ECEFF1,
+        background: #ffffff,
         footer-primary: #371448,
         footer-primary-highlight: #B3185B,
         footer-primary-light: #592864,
@@ -197,13 +197,13 @@ $colours: (
     ),
     digital: (
         primary: #1976d2,
-        primary-fade: rgba(13, 71, 161, 0.89),
+        primary-fade: rgba(13,71,161,0.89),
         primary-light: #1976D2,
         primary-dark: #0D47A1,
         secondary: #FF8F00,
         secondary-light: #FFA000,
         secondary-dark: #FF6F00,
-        background: #ECEFF1,
+        background: #ffffff,
         footer-primary: #371448,
         footer-primary-highlight: #B3185B,
         footer-primary-light: #592864,
@@ -212,13 +212,13 @@ $colours: (
     ),
     home: (
         primary: #1565C0,
-        primary-fade: rgba(21, 101, 192, 0.89),
+        primary-fade: rgba(21,101,192,0.89),
         primary-light: #1976D2,
         primary-dark: #0D47A1,
         secondary: #FF8F00,
         secondary-light: #FFA000,
         secondary-dark: #FF6F00,
-        background: #ECEFF1,
+        background: #ffffff,
         footer-primary: #371448,
         footer-primary-highlight: #B3185B,
         footer-primary-light: #592864,
@@ -228,74 +228,95 @@ $colours: (
 );
 
 @mixin theme-colours($themeName: 'default') {
-    @if map-has-key($colours, $themeName) {
+    @if map-has-key($colours,$themeName) {
         $themeName: 'default';
     }
 
-    $theme: map-get($colours, $themeName);
+    $theme: map-get($colours,$themeName);
 
-    .mdc--primary { color: map-get($theme, 'primary'); }
-    .mdc--primary-fade { color: map-get($theme, 'primary-fade'); }
-    .mdc--primary-light { color: map-get($theme, 'primary-light'); }
-    .mdc--primary-dark { color: map-get($theme, 'primary-dark'); }
-    .mdc--secondary { color: map-get($theme, 'secondary'); }
-    .mdc--secondary-light { color: map-get($theme, 'secondary-light'); }
-    .mdc--secondary-dark { color: map-get($theme, 'secondary-dark'); }
-    .mdc--background { background-color: map-get($theme, 'background'); }
-    .mdc--primary-bg { background-color: map-get($theme, 'primary'); }
-    .mdc--primary-fade-bg { background-color: map-get($theme, 'primary-fade'); }
-    .mdc--primary-light-bg { background-color: map-get($theme, 'primary-light'); }
-    .mdc--primary-dark-bg { background-color: map-get($theme, 'primary-dark'); }
-    .mdc--secondary-bg { background-color: map-get($theme, 'secondary'); }
-    .mdc--secondary-light-bg { background-color: map-get($theme, 'secondary-light'); }
-    .mdc--secondary-dark-bg { background-color: map-get($theme, 'secondary-dark'); }
-    .mdc--text-primary-on-primary { }
-    .mdc--text-primary-on-primary-light { }
-    .mdc--text-primary-on-primary-dark { }
-    .mdc--text-secondary-on-primary { }
-    .mdc--text-secondary-on-primary-light { }
-    .mdc--text-secondary-on-primary-dark { }
-    .mdc--text-hint-on-primary { }
-    .mdc--text-hint-on-primary-light { }
-    .mdc--text-hint-on-primary-dark { }
-    .mdc--text-disabled-on-primary { }
-    .mdc--text-disabled-on-primary-light { }
-    .mdc--text-disabled-on-primary-dark { }
-    .mdc--text-icon-on-primary { }
-    .mdc--text-icon-on-primary-light { }
-    .mdc--text-icon-on-primary-dark { }
+    .mdc-theme--primary { color: map-get($theme,'primary'); }
+    .mdc-theme--primary-fade { color: map-get($theme,'primary-fade'); }
+    .mdc-theme--primary-light { color: map-get($theme,'primary-light'); }
+    .mdc-theme--primary-dark { color: map-get($theme,'primary-dark'); }
+    .mdc-theme--secondary { color: map-get($theme,'secondary'); }
+    .mdc-theme--secondary-light { color: map-get($theme,'secondary-light'); }
+    .mdc-theme--secondary-dark { color: map-get($theme,'secondary-dark'); }
+    .mdc-theme--background { background-color: map-get($theme,'background'); }
+    .mdc-theme--site-bg { background-color: map-get($theme,'site-background'); }
+    .mdc-theme--primary-bg { background-color: map-get($theme,'primary'); }
+    .mdc-theme--primary-fade-bg { background-color: map-get($theme,'primary-fade'); }
+    .mdc-theme--primary-light-bg { background-color: map-get($theme,'primary-light'); }
+    .mdc-theme--primary-dark-bg { background-color: map-get($theme,'primary-dark'); }
+    .mdc-theme--secondary-bg { background-color: map-get($theme,'secondary'); }
+    .mdc-theme--secondary-light-bg { background-color: map-get($theme,'secondary-light'); }
+    .mdc-theme--secondary-dark-bg { background-color: map-get($theme,'secondary-dark'); }
+    .mdc-theme--text-primary-on-primary { }
+    .mdc-theme--text-primary-on-primary-light { }
+    .mdc-theme--text-primary-on-primary-dark { }
+    .mdc-theme--text-secondary-on-primary { }
+    .mdc-theme--text-secondary-on-primary-light { }
+    .mdc-theme--text-secondary-on-primary-dark { }
+    .mdc-theme--text-hint-on-primary { }
+    .mdc-theme--text-hint-on-primary-light { }
+    .mdc-theme--text-hint-on-primary-dark { }
+    .mdc-theme--text-disabled-on-primary { }
+    .mdc-theme--text-disabled-on-primary-light { }
+    .mdc-theme--text-disabled-on-primary-dark { }
+    .mdc-theme--text-icon-on-primary { }
+    .mdc-theme--text-icon-on-primary-light { }
+    .mdc-theme--text-icon-on-primary-dark { }
 }
 
 @include theme-colours('default');
 
-.running-a-charity, .setting-up-a-charity, .running-your-organisation {
+.running-a-charity,
+.setting-up-a-charity,
+.running-your-organisation {
     @include theme-colours('charity');
 }
-.search-result.cjs-job, .employability, .employment, .jobs {
+.search-result.cjs-job,
+.employability,
+.employment,
+.jobs {
     @include theme-colours('jobs');
 }
-.goodmoves, .search-result.goodmoves-job, .services.goodmoves {
+.goodmoves,
+.search-result.goodmoves-job,
+.services.goodmoves {
     @include theme-colours('goodmoves');
 }
 .funding {
     @include theme-colours('funding');
 }
-.project, .campaign, .open-government, .projects-campaigns {
+.project,
+.campaign,
+.open-government,
+.projects-campaigns {
     @include theme-colours('projects');
 }
-.digital .callout-image, .post, .blogs, .press-media, .policy-research {
+.digital .callout-image,
+.post,
+.blogs,
+.press-media,
+.policy-research {
     @include theme-colours('posts');
 }
-.goodhq, .search-result.goodhq-organisation {
+.goodhq,
+.search-result.goodhq-organisation {
     @include theme-colours('goodhq');
 }
 .search-result.digital-charter-signatory {
     @include theme-colours('digital-charter');
 }
-.tfn, .post-related-tfn, .gist.tfn-post, .search-result.tfn-post {
+.tfn,
+.post-related-tfn,
+.gist.tfn-post,
+.search-result.tfn-post {
     @include theme-colours('tfn');
 }
-.funding-scotland, .search-result.funding-scotland-fund, .services.funding-scotland {
+.funding-scotland,
+.search-result.funding-scotland-fund,
+.services.funding-scotland {
     @include theme-colours('funding-scotland');
 }
 .credit-union {
@@ -306,6 +327,18 @@ $colours: (
     @include theme-colours('digital');
 }
 
-.services, .breadcrumbs, .page-content, .page-sidebar, .post-content, .post-sidebar, .library-content, .library-sidebar, .home .cta-content, .home .latest-content, .home .gist.scvo-cms-post, .home .gist.goodmoves-job, .home .gist.tfn-post {
+.services,
+.breadcrumbs,
+.page-content,
+.page-sidebar,
+.post-content,
+.post-sidebar,
+.library-content,
+.library-sidebar,
+.home .cta-content,
+.home .latest-content,
+.home .gist.scvo-cms-post,
+.home .gist.goodmoves-job,
+.home .gist.tfn-post {
     @include theme-colours('home');
 }
