--- a/functions/test-db/json2/scvo/sass/_colours.scss
+++ b/functions/test-db/json2/scvo/sass/_colours.scss
@@ -234,22 +234,58 @@ $colours: (
 
     $theme: map-get($colours,$themeName);
 
-    .mdc-theme--primary { color: map-get($theme,'primary'); }
-    .mdc-theme--primary-fade { color: map-get($theme,'primary-fade'); }
-    .mdc-theme--primary-light { color: map-get($theme,'primary-light'); }
-    .mdc-theme--primary-dark { color: map-get($theme,'primary-dark'); }
-    .mdc-theme--secondary { color: map-get($theme,'secondary'); }
-    .mdc-theme--secondary-light { color: map-get($theme,'secondary-light'); }
-    .mdc-theme--secondary-dark { color: map-get($theme,'secondary-dark'); }
-    .mdc-theme--background { background-color: map-get($theme,'background'); }
-    .mdc-theme--site-bg { background-color: map-get($theme,'site-background'); }
-    .mdc-theme--primary-bg { background-color: map-get($theme,'primary'); }
-    .mdc-theme--primary-fade-bg { background-color: map-get($theme,'primary-fade'); }
-    .mdc-theme--primary-light-bg { background-color: map-get($theme,'primary-light'); }
-    .mdc-theme--primary-dark-bg { background-color: map-get($theme,'primary-dark'); }
-    .mdc-theme--secondary-bg { background-color: map-get($theme,'secondary'); }
-    .mdc-theme--secondary-light-bg { background-color: map-get($theme,'secondary-light'); }
-    .mdc-theme--secondary-dark-bg { background-color: map-get($theme,'secondary-dark'); }
+    a,
+    .mdc-theme--primary {
+        color: map-get($theme,'primary');
+    }
+    .mdc-button:after,
+    .mdc-button:before,
+    .mdc-theme--primary-fade {
+        color: map-get($theme,'primary-fade');
+    }
+    .mdc-theme--primary-light {
+        color: map-get($theme,'primary-light');
+    }
+    a:hover,
+    .mdc-theme--primary-dark {
+        color: map-get($theme,'primary-dark');
+    }
+    .mdc-theme--secondary {
+        color: map-get($theme,'secondary');
+    }
+    .mdc-theme--secondary-light {
+        color: map-get($theme,'secondary-light');
+    }
+    .mdc-theme--secondary-dark {
+        color: map-get($theme,'secondary-dark');
+    }
+    .mdc-theme--background {
+        background-color: map-get($theme,'background');
+    }
+    .mdc-theme--site-bg {
+        background-color: map-get($theme,'site-background');
+    }
+    .mdc-theme--primary-bg {
+        background-color: map-get($theme,'primary');
+    }
+    .mdc-theme--primary-fade-bg {
+        background-color: map-get($theme,'primary-fade');
+    }
+    .mdc-theme--primary-light-bg {
+        background-color: map-get($theme,'primary-light');
+    }
+    .mdc-theme--primary-dark-bg {
+        background-color: map-get($theme,'primary-dark');
+    }
+    .mdc-theme--secondary-bg {
+        background-color: map-get($theme,'secondary');
+    }
+    .mdc-theme--secondary-light-bg {
+        background-color: map-get($theme,'secondary-light');
+    }
+    .mdc-theme--secondary-dark-bg {
+        background-color: map-get($theme,'secondary-dark');
+    }
     .mdc-theme--text-primary-on-primary { }
     .mdc-theme--text-primary-on-primary-light { }
     .mdc-theme--text-primary-on-primary-dark { }
