--- a/functions/test-db/json2/scvo/partials/menu-funding-guide.hbs
+++ b/functions/test-db/json2/scvo/partials/menu-funding-guide.hbs
@@ -1,8 +1,8 @@
 <nav class="menu-sidebar" id="funding-guide-menu">
     {{#each context.menus.funding-guide}}
-    <a class="mdc-button mdc-button--raised" href="{{path}}">{{{label}}}</a>
+    <a class="mdc-button mdc-button--raised" href="{{path}}"{{#if match}} class="active"{{/if}}>{{{label}}}</a>
     {{#each this.children}}
-    <a class="mdc-button mdc-button--raised" href="{{path}}">{{{label}}}</a>
+    <a class="mdc-button mdc-button--raised" href="{{path}}"{{#if match}} class="active"{{/if}}>{{{label}}}</a>
     {{/each}}
     {{/each}}
 </nav>
