Fixed handlebars reference

--- a/functions/test-db/json2/scvo/templates/event-search.hbs
+++ b/functions/test-db/json2/scvo/templates/event-search.hbs
@@ -28,7 +28,7 @@
                     <div class="mdc-layout-grid">
                         <div class="mdc-layout-grid__inner">
                             <div class="mdc-layout-grid__cell">
-                                <div class="mdc-textfield mdc-textfield--upgraded" data-mdc-auto-init="MDCTextfield">
+                                <div class="mdc-textfield mdc-textfield--upgraded" data-mdc-auto-init="MDCTextField">
                                     <input type="text" class="mdc-textfield__input" name="q" id="events-keywords" value="{{params.query.q}}">
                                     <label class="mdc-textfield__label" for="events-keywords">Keywords</label>
                                     <div class="mdc-textfield__bottom-line"></div>
